@@ -15,7 +15,8 @@
   * Added #image_elements to ElementLocators
   * Added #form_elements to ElementLocators
   * Added #list_item_elements to ElementLocators
-  * Added *unordered_list_elements to ElementLocators
+  * Added #unordered_list_elements to ElementLocators
+  * Added #ordered_list_elements to ElementLocators
   * Added #navigate_to to PageFactory to navigate to a page through previous pages
   * Added #continue_navigation_to to PageFactory which begins at @current_page
   * Added routes to PageFactory to collect routes through the site
